# slop-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
examples/: example.slop  example_pretty.slop  features.rs  test.slop
src/: error.rs  lib.rs  slop.rs  tests.rs  value.rs
